[package]
name = "tree-ds"
description = "A library to manipulate tree data structures."
version = "0.1.3"
edition = "2021"
authors = ["Clement Wanjau <clementwanjau@gmail.com>"]
repository = "https://github.com/clementwanjau/tree-ds"
documentation = "https://docs.rs/tree-ds"
license = "MIT"
readme = "Readme.md"
keywords = ["tree", "data-structures", "rust"]
categories = ["algorithms", "data-structures"]
rust-version = "1.71.0" #MRSV

[features]
default = [] # By default, the library has no features enabled.
async = [] # The "async" feature enables the use of the library in asynchronous contexts.
serde = ["dep:serde"] # The "serde" feature enables serialization and deserialization of the library's types.
auto_id = ["dep:sequential_gen", "dep:lazy_static"] # This feature enables the automatic generation of unique identifiers for nodes.

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
thiserror = "1.0.61"
sequential_gen = { version = "0.1.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
