[package]
name = "tree-ds"
description = "A library to manipulate tree data structures."
version = "0.1.3"
edition = "2021"
authors = ["Clement Wanjau <clementwanjau@gmail.com>"]
repository = "https://github.com/clementwanjau/tree-ds"
documentation = "https://docs.rs/tree-ds"
license = "MIT"
readme = "README.md"
keywords = ["tree", "data-structures", "rust"]
categories = ["algorithms", "data-structures"]
rust-version = "1.71.0" #MRSV

[features]
default = [] # By default, the library has no features enabled.
async = [] # The "async" feature enables the use of the library in asynchronous contexts.
serde = ["serde/std"] # The "serde" feature enables serialization and deserialization of the library's types.
auto_id = ["sequential_gen/default", "lazy_static/spin"] # This feature enables the automatic generation of unique identifiers for nodes.
no_std = ["sequential_gen/no_std", "lazy_static/spin_no_std", "serde/alloc"] # The "no_std" feature enables the use of the library in no_std environments.


[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
thiserror = "1.0.61"
sequential_gen = { version = "0.1.0", default-features = false }
lazy_static = { version = "1.4.0" }

[dev-dependencies]
serde_json = { version = "1.0" }
